--- a/expense.conf
+++ b/expense.conf
@@ -1,6 +1,6 @@
 proxy_http_version 1.1;
 
-location /api/ { proxy_pass http://localhost:8080/; }
+location /api/ { proxy_pass http://3.86.91.94:8080/; }
 
 location /health {
   stub_status on;
